tests/compile-fail/get-set-on-private-field.stderr
error[E0405]: cannot find trait `__salsa_crate_Db` in module `self`
 --> tests/compile-fail/get-set-on-private-field.rs:8:16
  |
8 |     pub struct MyInput {
  |                ^^^^^^^ not found in `self`
  |
help: consider importing this trait through its public re-export
  |
5 +     use crate::__salsa_crate_Db;
  |
